--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="date-time-city">
                 <div class="all-details">
                     <div class="date">
-                        <h2>4 May, 2025</h2>
+                        <h2>Sunday, 4 May, 2025</h2>
                     </div>
                     <div class="day-time">
-                        <h2>Sunday, 12:29:05 AM</h2>
+                        <h2>12:29:05 AM</h2>
                     </div>
                 </div>
                 <div class="city">
