Necesaary Changes in html

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             
             <!-- Daily Planner Card -->
             <div class="daily-planner card" data-target="forDaily">
-                <video autoplay loop muted playsinline disablepictureinpicture 
-                controlslist="nodownload nofullscreen noremoteplayback" src="/Project_Assignment/projectDom/From KlickPin CF Pinterest Pin-2111131069644845.mp4"></video>
+                <img src="https://i.pinimg.com/736x/f6/2e/e8/f62ee8d9f467296848e921150a065c83.jpg" alt="">
                 <div class="card-effects">
                     <h2>Daily Planner</h2>
                 </div>
@@ -61,8 +60,7 @@
             
             <!-- Motivation Card -->
             <div class="motivation card" data-target="forMotivation">
-                <video autoplay loop muted playsinline disablepictureinpicture 
-                controlslist="nodownload nofullscreen noremoteplayback" src="/Project_Assignment/projectDom/From KlickPin CF New Red motion background for reels and shorts in 2025 _ Motion graphics trends Film texture Motion graphics tutorial.mp4"></video>
+                <img src="https://i.pinimg.com/736x/78/fa/dc/78fadc286c1bf7f9dd4f4e24741576d7.jpg" alt="">
                 <div class="card-effects">
                     <h2>Motivation</h2>
                 </div>
